--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,18 @@
     "@emotion/react": "^11.9.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
+    "antd": "^4.20.1",
     "emotion": "^11.0.0",
     "next": "12.1.4",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-redux": "^7.2.8",
+    "react-typing-effect": "^2.0.5",
     "redux": "^4.1.2",
-    "redux-devtools-extension": "^2.13.9"
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "8.13.0",
